Update translations for German, English, French, Italian, and Dutch; modify changelog date and adjust layout styles

--- a/translations/de.json
+++ b/translations/de.json
@@ -244,15 +244,15 @@
   },
   "apiDocs": {
     "title": "MMCore API-Dokumentation",
-    "subtitle": "Vollständige Referenz zur Integration mit unserer Multi-Carrier-Versandplattform",
+    "subtitle": "Vollständige Referenz für die Integration mit unserer Multi-Carrier-Versandplattform",
     "quickStart": "Schnellstart",
-    "getUpAndRunning": "Schnell einsatzbereit",
-    "signUpForAccount": "Konto erstellen",
-    "includeAuthUser": "Fügen Sie AUTH_USER und AUTH_PW zur Authentifizierung hinzu.",
+    "getUpAndRunning": "Loslegen",
+    "signUpForAccount": "Ein Konto erstellen",
+    "includeAuthUser": "Fügen Sie AUTH_USER und AUTH_PW hinzu, um sich zu authentifizieren.",
     "verifyCredentials": "Überprüfen Sie Ihre Zugangsdaten",
-    "startProcessing": "Sendungen verarbeiten",
+    "startProcessing": "Beginnen Sie mit der Verarbeitung von Sendungen",
     "exampleAuthentication": "Beispiel: Authentifizierung",
-    "basicExample": "Grundbeispiel",
+    "basicExample": "Einfaches Beispiel",
     "endpointsTitle": "API-Endpunkte",
     "completeReference": "Vollständige Referenz",
     "parameters": "Parameter",
@@ -266,15 +266,18 @@
     "headerAuthentication": "Header-Authentifizierung",
     "securityNote": "Sicherheitshinweis",
     "keepCredentialsSecure": "Bewahren Sie Ihre Zugangsdaten sicher auf.",
-    "neverExpose": "Geben Sie diese niemals weiter.",
+    "neverExpose": "Geben Sie diese niemals preis.",
     "useEnvironmentVariables": "Verwenden Sie Umgebungsvariablen.",
     "additionalResources": "Zusätzliche Ressourcen",
     "everythingYouNeed": "Alles, was Sie brauchen",
     "postmanCollection": "Postman-Sammlung",
     "getSupport": "Support erhalten",
     "changelog": "Änderungsprotokoll",
+    "changelogSubtitle": "Bleiben Sie auf dem Laufenden über die neuesten Änderungen und Verbesserungen",
+    "stayUpdated": "Bleiben Sie auf dem Laufenden",
+    "backToDocumentation": "Zurück zur Dokumentation",
     "badges": {
-      "restApi": "REST API",
+      "restApi": "REST-API",
       "realTimeTracking": "Echtzeit-Tracking",
       "manifestProcessing": "Manifestverarbeitung",
       "multiCarrier": "Multi-Carrier"
