--- a/translations/fr.json
+++ b/translations/fr.json
@@ -15,7 +15,7 @@
   "hero": {
     "trustedBy": "De confiance pour plus de 500 entreprises",
     "title": "Solutions logistiques et de fulfillment sans faille",
-    "titleHighlight": "Fulfillment",
+    "titleHighlight": "fulfillment",
     "subtitle": "Connectez des marques, des fabricants et des prestataires logistiques partout en Europe et au Royaume-Uni grâce à notre plateforme multi-transporteurs avancée.",
     "getStarted": "Commencer dès aujourd’hui",
     "viewApiDocs": "Voir la doc API",
@@ -243,14 +243,14 @@
     }
   },
   "apiDocs": {
-    "title": "Documentation API MMCore",
-    "subtitle": "Référence complète pour intégrer notre plateforme d’expédition multi-transporteurs",
+    "title": "Documentation de l'API MMCore",
+    "subtitle": "Référence complète pour l'intégration avec notre plateforme d'expédition multi-transporteurs",
     "quickStart": "Démarrage rapide",
     "getUpAndRunning": "Mise en route",
     "signUpForAccount": "Créer un compte",
     "includeAuthUser": "Incluez AUTH_USER et AUTH_PW pour vous authentifier.",
     "verifyCredentials": "Vérifiez vos identifiants",
-    "startProcessing": "Commencer à traiter les envois",
+    "startProcessing": "Commencez à traiter les expéditions",
     "exampleAuthentication": "Exemple : Authentification",
     "basicExample": "Exemple basique",
     "endpointsTitle": "Points de terminaison API",
@@ -267,14 +267,17 @@
     "securityNote": "Note de sécurité",
     "keepCredentialsSecure": "Gardez vos identifiants en sécurité.",
     "neverExpose": "Ne les exposez jamais.",
-    "useEnvironmentVariables": "Utilisez des variables d’environnement.",
+    "useEnvironmentVariables": "Utilisez des variables d'environnement.",
     "additionalResources": "Ressources supplémentaires",
     "everythingYouNeed": "Tout ce dont vous avez besoin",
     "postmanCollection": "Collection Postman",
-    "getSupport": "Obtenir de l’aide",
+    "getSupport": "Obtenir de l'aide",
     "changelog": "Journal des modifications",
+    "changelogSubtitle": "Restez informé des dernières modifications et améliorations",
+    "stayUpdated": "Restez informé",
+    "backToDocumentation": "Retour à la documentation",
     "badges": {
-      "restApi": "REST API",
+      "restApi": "API REST",
       "realTimeTracking": "Suivi en temps réel",
       "manifestProcessing": "Traitement des manifestes",
       "multiCarrier": "Multi-transporteurs"
