--- a/translations/it.json
+++ b/translations/it.json
@@ -244,10 +244,10 @@
     },
     "apiDocs": {
         "title": "Documentazione API MMCore",
-        "subtitle": "Riferimento completo per l'integrazione con la nostra piattaforma di spedizione multi-corriere",
-        "quickStart": "Avvio Rapido",
+        "subtitle": "Riferimento completo per l'integrazione con la nostra piattaforma di spedizioni multi-corriere",
+        "quickStart": "Guida rapida",
         "getUpAndRunning": "Inizia subito",
-        "signUpForAccount": "Registrati per un account",
+        "signUpForAccount": "Crea un account",
         "includeAuthUser": "Includi AUTH_USER e AUTH_PW per autenticarti.",
         "verifyCredentials": "Verifica le tue credenziali",
         "startProcessing": "Inizia a processare le spedizioni",
@@ -256,28 +256,31 @@
         "endpointsTitle": "Endpoint API",
         "completeReference": "Riferimento completo",
         "parameters": "Parametri",
-        "queryParameters": "Parametri Query",
-        "default": "Default",
+        "queryParameters": "Parametri query",
+        "default": "Predefinito",
         "values": "Valori",
         "response": "Risposta",
         "example": "Esempio",
         "authentication": "Autenticazione",
         "secureYourApi": "Proteggi la tua API",
-        "headerAuthentication": "Autenticazione Header",
-        "securityNote": "Nota di Sicurezza",
-        "keepCredentialsSecure": "Mantieni le tue credenziali sicure.",
+        "headerAuthentication": "Autenticazione tramite header",
+        "securityNote": "Nota di sicurezza",
+        "keepCredentialsSecure": "Mantieni sicure le tue credenziali.",
         "neverExpose": "Non esporle mai.",
-        "useEnvironmentVariables": "Usa variabili di ambiente.",
-        "additionalResources": "Risorse Aggiuntive",
+        "useEnvironmentVariables": "Usa le variabili d'ambiente.",
+        "additionalResources": "Risorse aggiuntive",
         "everythingYouNeed": "Tutto ciò di cui hai bisogno",
         "postmanCollection": "Collezione Postman",
-        "getSupport": "Ottieni Supporto",
-        "changelog": "Registro Modifiche",
+        "getSupport": "Ottieni supporto",
+        "changelog": "Registro modifiche",
+        "changelogSubtitle": "Rimani aggiornato con le ultime modifiche e miglioramenti",
+        "stayUpdated": "Rimani aggiornato",
+        "backToDocumentation": "Torna alla documentazione",
         "badges": {
-            "restApi": "REST API",
+            "restApi": "API REST",
             "realTimeTracking": "Tracciamento in tempo reale",
-            "manifestProcessing": "Elaborazione Manifesti",
-            "multiCarrier": "Multi-Corriere"
+            "manifestProcessing": "Elaborazione manifesti",
+            "multiCarrier": "Multi-corriere"
         },
         "statusCodes": "Codici di Stato",
         "statusCodesIntro": "Codici restituiti nelle risposte di tracciamento con le relative descrizioni",
