--- a/translations/nl.json
+++ b/translations/nl.json
@@ -14,7 +14,7 @@
   },
   "hero": {
     "trustedBy": "Vertrouwd door 500+ bedrijven",
-    "title": "Naadloze logistiek- & fulfilmentoplossingen",
+    "title": "Naadloze logistiek- & Fulfilment oplossingen",
     "titleHighlight": "Fulfilment",
     "subtitle": "Verbind merken, fabrikanten en logistieke aanbieders in heel Europa en het VK met ons geavanceerde multi-carrier platform.",
     "getStarted": "Begin vandaag nog",
@@ -246,36 +246,39 @@
     "title": "MMCore API-documentatie",
     "subtitle": "Volledige referentie voor integratie met ons multi-carrier verzendplatform",
     "quickStart": "Snelstart",
-    "getUpAndRunning": "Snel operationeel",
-    "signUpForAccount": "Account aanmaken",
-    "includeAuthUser": "Voeg AUTH_USER en AUTH_PW toe voor authenticatie.",
-    "verifyCredentials": "Controleer uw inloggegevens",
-    "startProcessing": "Begin met verwerken van zendingen",
+    "getUpAndRunning": "Aan de slag",
+    "signUpForAccount": "Maak een account aan",
+    "includeAuthUser": "Voeg AUTH_USER en AUTH_PW toe om te authenticeren.",
+    "verifyCredentials": "Controleer je inloggegevens",
+    "startProcessing": "Begin met het verwerken van zendingen",
     "exampleAuthentication": "Voorbeeld: Authenticatie",
-    "basicExample": "Basisvoorbeeld",
+    "basicExample": "Eenvoudig voorbeeld",
     "endpointsTitle": "API-eindpunten",
     "completeReference": "Volledige referentie",
     "parameters": "Parameters",
     "queryParameters": "Queryparameters",
     "default": "Standaard",
     "values": "Waarden",
-    "response": "Antwoord",
+    "response": "Respons",
     "example": "Voorbeeld",
     "authentication": "Authenticatie",
-    "secureYourApi": "Beveilig uw API",
-    "headerAuthentication": "Header-authenticatie",
-    "securityNote": "Veiligheidsopmerking",
-    "keepCredentialsSecure": "Bewaar uw inloggegevens veilig.",
-    "neverExpose": "Geef deze nooit vrij.",
+    "secureYourApi": "Beveilig je API",
+    "headerAuthentication": "Authenticatie via header",
+    "securityNote": "Beveiligingsnota",
+    "keepCredentialsSecure": "Houd je inloggegevens veilig.",
+    "neverExpose": "Stel ze nooit bloot.",
     "useEnvironmentVariables": "Gebruik omgevingsvariabelen.",
     "additionalResources": "Aanvullende bronnen",
-    "everythingYouNeed": "Alles wat u nodig heeft",
+    "everythingYouNeed": "Alles wat je nodig hebt",
     "postmanCollection": "Postman-collectie",
-    "getSupport": "Ondersteuning krijgen",
+    "getSupport": "Hulp krijgen",
     "changelog": "Wijzigingslogboek",
+    "changelogSubtitle": "Blijf op de hoogte van de laatste wijzigingen en verbeteringen",
+    "stayUpdated": "Blijf op de hoogte",
+    "backToDocumentation": "Terug naar de documentatie",
     "badges": {
-      "restApi": "REST API",
-      "realTimeTracking": "Realtime Tracking",
+      "restApi": "REST-API",
+      "realTimeTracking": "Realtime tracking",
       "manifestProcessing": "Manifestverwerking",
       "multiCarrier": "Multi-carrier"
     },
